Refactor PhoneNumber parsing
Signed-off-by: Jan Hamal Dvořák <mordae@anilinux.org>

--- a/aweg.cabal
+++ b/aweg.cabal
@@ -80,6 +80,7 @@ library
 
     hs-source-dirs: lib
     other-modules:
+        AWEG.Parser.PhoneNumber
         AWEG.Parser.Response
         AWEG.Parser.Report
         AWEG.Build
