Set long poll timeout to 1h
Indefinite timeout could result in a hang, apparently.

Signed-off-by: Jan Hamal Dvořák <mordae@anilinux.org>

--- a/aweg.cabal
+++ b/aweg.cabal
@@ -38,6 +38,7 @@ common common
         MultiParamTypeClasses
         NamedFieldPuns
         NoImplicitPrelude
+        NumericUnderscores
         OverloadedStrings
         ParallelListComp
         QuasiQuotes
